<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="de">

    <string name="app_name">KinoCast</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="title_section1">Neue Kinofilme</string>
    <string name="title_section2">Beliebte Filme</string>
    <string name="title_section3">Neuste Filme</string>
    <string name="title_section4">Beliebte Serien</string>
    <string name="title_section5">Neuste Serien</string>
    <string name="title_section6">Favoriten</string>
    <string name="title_section7">Einstellungen</string>

    <string name="update_check">http://ov3rk1ll.github.io/KinoCast/update2.json</string>
    <string name="update_checking">Prüfe auf Update...</string>
    <string name="update_uptodate">Du hast bereists die aktuelle Version installiert</string>

    <string name="navigation_drawer_open">Navigation öffnen</string>
    <string name="navigation_drawer_close">Navigation schließen</string>

    <string name="title_activity_detail">Details</string>
    <string name="chromecast_subtitle">powered by KinoCast</string>
    <string name="chromecast_not_connected">Chromecast nicht verbunden. Öffne Videoplayer…</string>
    <string name="host_resolve_error">Fehler beim Auflösen des Hosts!
Die Datei wurde möglicherweiße gelöscht.</string>
    <string name="loading">Lade…</string>
    <string name="detail_season">Staffel</string>
    <string name="detail_episode">Episode</string>
    <string name="detail_mirror">Mirror</string>
    <string name="detail_open_in_browser">im Browser öffnen</string>
    <string name="detail_open_imdb">auf IMDb anzeigen</string>
    <string name="detail_bookmark_on">Aus Favoriten entfernen</string>
    <string name="detail_bookmark_on_confirm">Aus Favoriten entfernt</string>
    <string name="detail_bookmark_off">Zu Favoriten hinzufügen</string>
    <string name="detail_bookmark_off_confirm">Zu Favoriten hinzugefügt</string>
    <string name="no_host_found">Kein Hoster verfügbar</string>
    <string name="pref_ringtone_silent">Lautlos</string>
    <string name="menu_search">Suchen</string>
    <string name="searchable_hint">Suche</string>
    <string name="title_activity_player">Player</string>
    <string name="action_settings">Settings</string>

    <string name="player_internal_list_entry">Abspielen</string>
    <string name="player_select_dialog_title">Player wählen:</string>
    <string name="player_loading_video">Lade video</string>
    <string name="player_buffering">Buffering</string>
    <string name="player_chromecast_list_entry">Chromecast</string>
    <string name="player_unsupported_format">Video kann nicht abgespielt werden! Bitte versuche einen anderen Player.</string>
    <string name="player_error_dialog_title">Fehler beim Abspielen</string>
    <string name="player_warn_no_wifi">Das Ansehen von Filmen verursacht hohe Datendownloads. Über eine Mobilfunkverbindung können so hohe Kosten entstehen!
Trozdem fortfahren?</string>

    <string name="connection_error_title">Verbindungsfehler</string>
    <string name="connection_error_message">%1$s antwortet nicht!</string>
    <string name="connection_error_button">Wiederholen</string>

    <string name="showcast_series_title">Staffel und Episode</string>
    <string name="showcast_series_text">Wähle die Staffel und Episode aus die du ansehen willst hier aus</string>
    <string name="showcast_mirror_title">Mirror</string>
    <string name="showcast_mirror_text">Wähle den Hoster und Mirror hier aus</string>
    <string name="showcast_chromecast_title">Chromecast</string>
    <string name="showcast_chromecast_text">Verbinde dich um Filme an den Chromecast zu streamen</string>
    <string name="showcast_bookmarks_title">Favoriten</string>
    <string name="showcast_bookmarks_text">Füge deine Lieblingsfilme und Serien zu den Favoriten hinzu.
Deine Favoriten findest du im Menü auf der linken Seite.</string>

    <string name="host_progress_getvideoforid">Hole video mit ID %1$s</string>
    <string name="host_progress_getdatafrom">Lade Daten von %1$s</string>
    <string name="host_progress_wait">Warte für %1$s Sekunden</string>
    <string name="host_progress_senddatato">Senden Daten an %1$s</string>
    <string name="host_progress_gettinglink">Hole Videolink</string>
    <string name="host_progress_1sttry">Link beim ersten Versuch gefunden</string>
    <string name="host_progress_2ndtry">Link beim zweiten Versuch gefunden</string>

    <string name="order_hostlist">Hosterliste sortieren</string>
    <string name="order_hostlist_summary">Sortiere deine Lieblingshoster</string>

    <string name="donate_dialog_title">Unterstütze KinoCast</string>
    <string name="donate_dialog_message">Gefällt dir KinoCast? Dann unterstütze uns doch mit einer kleinen Spende</string>
    <string name="donate_dialog_yes">Jetzt spenden</string>
    <string name="donate_dialog_never">Nein, danke</string>
    <string name="donate_dialog_later">Später</string>

    <string name="detail_donate_text">Hier sollte eigentlich Werbung sein. Da hier gerade keine Werbung ist würde wir und über eine kleine Unterstützung auf PayPal freuen.</string>
    <string name="detail_donate_button">Spenden</string>


</resources>
