<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ov3rk1ll.kinocast.ui.DetailActivity" >
    <item
        android:id="@+id/media_route_menu_item"
        android:title="@string/media_route_menu_title"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_bookmark_on"
        android:title="@string/detail_bookmark_on"
        android:icon="@drawable/ic_action_bookmark_on"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_bookmark_off"
        android:title="@string/detail_bookmark_off"
        android:icon="@drawable/ic_action_bookmark_off"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:title="@string/detail_open_in_browser"
        android:icon="@drawable/ic_action_browser"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_imdb"
        android:title="@string/detail_open_imdb"
        android:icon="@drawable/ic_action_imdb"
        app:showAsAction="always" />
</menu>
